# regalo-fio-dnd

./: .env.example  .gitignore  LICENSE  README.md  dnd-orchestrator.sh  index.html  package-lock.json  package.json  player.html  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  pr-check.yml  release.yml
docs/: UPDATER_SETUP.md
src/: App.tsx  index.css  player.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  player-display.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/combatants/: mod.rs
src-tauri/src/companion/: mod.rs  player_view.html  server.rs
src-tauri/src/db/: mod.rs
src-tauri/src/display/: mod.rs
src-tauri/src/guion/: mod.rs
src-tauri/src/manuals/: mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/sample/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/sound_triggers/: mod.rs
src-tauri/src/spotify/: mod.rs
src/components/: AssetBrowser.tsx  AssetCard.tsx  AssetPreview.tsx  CharacterSheets.tsx  CompanionDialog.tsx  DiceOverlay.tsx  DisplayPanel.tsx  FogPainter.tsx  GeneratorOverlay.tsx  GuionEditor.tsx  HelpModal.tsx  InitiativeTracker.tsx  LibraryBrowser.tsx  ManualPageViewer.tsx  ManualSearch.tsx  MiniSpotifyPlayer.tsx  NotesPanel.tsx  SendHandoutDialog.tsx  SoundboardPanel.tsx  SpotifyPanel.tsx  Toaster.tsx  UpdaterToast.tsx
src/components/companion/: ChatPanel.tsx
src/components/initiative/: StatBlockPanel.tsx
src/components/manuals/: ManualsList.tsx
src/components/sound-triggers/: SoundTriggersSection.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  IconButton.tsx  KeyboardKey.tsx  Modal.tsx  Skeleton.tsx  Tabs.tsx  Tooltip.tsx  (+1 more)
src/lib/: audioController.ts  companion.ts  dice.ts  fogTypes.ts  formatDate.ts  generators.ts  guionParser.ts  manuals.ts  persistence.ts  soundTriggers.ts  statBlockCache.ts  toast.ts  types.ts  updater.ts  useDebouncedEffect.ts  useSoundTriggerEngine.ts
src/pages/: PlayerDisplay.tsx  SessionDashboard.tsx  SessionList.tsx
src/store/: chatStore.ts  liveStateStore.ts  sessionStore.ts  spotifyStore.ts
