[package]
name = "dnd-orchestrator"
version = "1.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dnd_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Auto-updater (v1.5): chequea GitHub Releases en startup, descarga e instala
# silencioso, frontend pide reiniciar. `process` es para el relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
thiserror = "1"
rodio = { version = "0.19", features = ["mp3", "wav", "flac", "vorbis"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
urlencoding = "2"
# Knowledge Base (v1.2): PDF extraction + unicode normalization + embeddings
pdf-extract = "0.7"
unicode-normalization = "0.1"
# fastembed bundles ONNX runtime + tokenizers and downloads the actual model
# the first time TextEmbedding::try_new is called (cached on disk after).
fastembed = "5"
# Player Web Companion (v1.3 B.1): HTTP server embebido + CORS + QR
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
qrcode = "0.14"
local-ip-address = "0.6"

